17-01-06 mfp. Added 'include' functionality, via use of
    preprocessor. Also modified the lexer/parser to disallow
    multi-line strings, which (up to very recently) were not
    working correctly anyway. This was done in order to make
    the preprocessing simpler to understand, and so that the
    preprocessing did not need to understand when it was
    "within" a string.

    The preprocessor is currently lacking protection against
    circular inclusion. This will be added soon. This preliminary
    check-in is being done so that Jim can work elsewhere in
    ParameterSet without colliding.

12-01-06 mfp. Fixed bug in pset_lex.l

The bug was in the pattern that identified double-quoted strings.  The
(wrong) behavior to was have a newline terminate a double-quoted
string. This had at least two bad effects:
  -- we would fail to catch errors in which a double-quoted string
     did not have an ending double-quote, e.g.
              string s = "Note the lack of trailing double-quote
     did not produce a parse error
  -- we would fail to parse what should have been a legal string,
     e.g.
        string s = "line 1
                    line 2"
     would cause a parse error.

Note this problem only appeared for double-quoted
strings. Single-quoted strings behaved correctly.
  

17-11-05 mfp & cdj. Fixed handling of unnamed source; "@main_input"
magic name now injected into ParameterSet, not parse tree.

15-11-05 mfp. Changed FileInPath to deal with new versions of its
environment variables.
   CMSDATA          --> CMSSW_DATA_PATH
   CMS_SEARCH_PATH  --> CMSSW_SEARCH_PATH

Modified tests to fit. Code and tests also deal with the old
environment variables, as a temporary measure.

01-11-05 mfp. Attempted to run the "test/run_all_parser_t.sh" script.

The tests fail because the output from printing the parse tree is no
longer legal input. The reason for failure (there may be others, but
this is the first encountered, which stops the test) is that the 'main